# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  21 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Each dhcp client now supports global options - ie dhcpcd="-a"

    Classical IP over ATM support has been added, #108153 thanks to
    Giampaolo Tomassoni. Note that he will not support the module and no
    Gentoo devs have the hardware so any bugs reported may take time to fix.

  18 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Don't stop services that are depended on by coldplugged services.

  17 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Document ppp plugin options, #144194.

    Allow RC_NEED_$iface to work in the same was as RC_NEED.

  16 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Fix typo's in net.example, #144144 thanks to Christian 'Opfer' Faulhammer.

    /sys/class/net/$iface/wireless means it's a wireless device too in
    iwconfig.sh and wpa_supplicant.sh

  15 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Fix start-stop-daemon using the --name option
    #143951 thanks to Dustin J. Mitchell

    Support old gateway variable with iproute2.
    arpinging of available address can be disabled with
    modules=( "!arping" )

  14 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Only send a process the TERM signal once, #141832

    Set frequency, channel and ap after ESSID, #143716 thanks to damage.

  13 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Remove silly dhcpcd version check. Drop -o from dhcpcd options as
    all dhcpcd versions in portage have been patches to not bring the interface
    down and future versions may not support that option as they won't bring
    the interface down at all.

    Fix frequency parsing and add channel parsing to iwconfig, #143698

    Start dhclient on the right interface, #130670 thanks to Petr Svoboda.

  04 Aug 2006; Roy Marples <uberlord@gentoo.org>:
